# improved-csd

./: Build.cpp  CMakeLists.txt  README.md  StringDictionary.cpp  StringDictionary.h  StringDictionaryMMPFC.cpp  StringDictionaryMMPFC.h  StringDictionaryMMPFCDAC.cpp  StringDictionaryMMPFCDAC.h  StringDictionaryMMPFC_libcds_bSD.cpp  StringDictionaryMMPFC_libcds_bSD.h  StringDictionaryMMPFC_libcds_bSD_llcp.cpp  StringDictionaryMMPFC_libcds_bSD_llcp.h  StringDictionaryMMPFC_libcds_bSD_rlcp.cpp  StringDictionaryMMPFC_libcds_bSD_rlcp.h  StringDictionaryMMPFC_plain.cpp  StringDictionaryMMPFC_plain.h  StringDictionaryMMPFC_plain_llcp.cpp  StringDictionaryMMPFC_plain_llcp.h  StringDictionaryMMPFC_plain_rlcp.cpp  StringDictionaryMMPFC_plain_rlcp.h  StringDictionaryMMRPFC_libcds_DAC2_VLS.cpp  StringDictionaryMMRPFC_libcds_DAC2_VLS.h  StringDictionaryMMRPFC_libcds_DAC2_VLS_llcp.cpp  StringDictionaryMMRPFC_libcds_DAC2_VLS_llcp.h  StringDictionaryMMRPFC_libcds_DAC2_VLS_rlcp.cpp  StringDictionaryMMRPFC_libcds_DAC2_VLS_rlcp.h  StringDictionaryMMRPFC_libcds_DAC_VLS.cpp  StringDictionaryMMRPFC_libcds_DAC_VLS.h  StringDictionaryMMRPFC_libcds_DAC_VLS_llcp.cpp  StringDictionaryMMRPFC_libcds_DAC_VLS_llcp.h  StringDictionaryMMRPFC_libcds_DAC_VLS_rlcp.cpp  StringDictionaryMMRPFC_libcds_DAC_VLS_rlcp.h  StringDictionaryMMRPFC_libcds_bSD.cpp  StringDictionaryMMRPFC_libcds_bSD.h  StringDictionaryMMRPFC_libcds_bSD_DAC.cpp  StringDictionaryMMRPFC_libcds_bSD_DAC.h  StringDictionaryMMRPFC_libcds_bSD_DAC2.cpp  StringDictionaryMMRPFC_libcds_bSD_DAC2.h  StringDictionaryMMRPFC_libcds_bSD_DAC2_llcp.cpp  (+17 more)
RePair/: RePair.cpp  RePair.h
RePair/Coder/: CRePair.cpp  CRePair.h  arrayg.cpp  arrayg.h  hash.h  heap.cpp  heap.h
iterators/: IteratorDictID.h  IteratorDictString.h
libs/libcds2/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/libcds2/includes/bitsequence/: BitSequence.h  BitSequenceBuilder.h  BitSequenceBuilderRPSC.h  BitSequenceBuilderRPSN.h  BitSequenceRPSC.h  BitSequenceRPSN.h
libs/libcds2/includes/direct_access/: DAC.h  DAC_Big.h  DAC_old.h  DirectAccess.h
libs/libcds2/includes/sequence/: BlockGraph.h  BlockGraphBuilder.h  BlockGraphUtils.h  Sequence.h  SequenceBuilder.h  SequenceBuilderSequenceRepairSC.h  SequenceBuilderSequenceRepairSN.h  SequenceRepair.h  SequenceRepairSC.h  SequenceRepairSN.h  WaveletMatrix.h  wt_coder_hutucker.h
libs/libcds2/includes/sequence/MultiArity/: MultiArityCanonicalHuffman.h  MultiArityCoder.h  MultiArityCoderFixed.h
libs/libcds2/includes/text_indexes/: fmi.h
libs/libcds2/includes/trees/: Parentheses.h
libs/libcds2/includes/utils/: GenericArray.h  IfstreamBuffer.h  StringUtils.h  libcdsBasics.h  libcdsTrees.h
libs/libcds2/src/static/bitsequence/: BitSequence.cpp  BitSequenceBRW32.cpp  BitSequenceBuilderRPSC.cpp  BitSequenceBuilderRPSN.cpp  BitSequenceBuilderRRR.cpp  BitSequencePlain.cpp  BitSequenceRG.cpp  BitSequenceRPSC.cpp  BitSequenceRPSN.cpp
libs/libcds2/src/static/coders/: huff.cpp
libs/libcds2/src/static/direct_access/: DAC.cpp  DAC_Big.cpp  DAC_old.cpp  DirectAccess.cpp
libs/libcds2/src/static/grammar/: DictionaryRP.cpp  RepairDN.cpp
libs/libcds2/src/static/mapper/: MapperRev.cpp
libs/libcds2/src/static/rmq/: RMQ.cpp
libs/libcds2/src/utils/: StringUtils.cpp  cppUtils.cpp  timing.cpp
libs/libcds2/tests/: TestSequences.cpp  runTests.py  testBitSequence.cpp
tools/: fileToDict.cpp
utils/: DAC_BVLS.h  DAC_VLS.cpp  DAC_VLS.h  LogSequence.h  Utils.h  VByte.h
utils/Coder/: BinaryNode.h  Codeword.h  DecodingTable.h  DecodingTree.h  StatCoder.h
(+40 files in other folders)
